<resources>
    <string name="app_name">AidATL</string>
    <string name="sign_on">Sign On</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <string name="action_sign_in_short">Sign in</string>
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <!--<string name="permission_rationale">Contacts permissions are needed for providing
    email completions.</string>-->
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="google_plus">Google Plus</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="search">Search</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="filter">Filter</string>
    <string name="youngest_child">Youngest Child: </string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyCVN3axVDMD3S5TU81uqy7Sq04ufTZvVwI</string>


    <!--Strings related to registration-->
    <string-array name="spouse_sex">
        <item>None</item>
        <item>Female</item>
        <item>Male</item>
    </string-array>

    <string-array name = "sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <!--Strings related to activities-->
    <string name="back">Back</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="log_out">Log Out</string>
    <string name="family">family:</string>
    <string name="veteran_status">veteran status:</string>
    <string name="spouse">spouse:</string>
    <string name="password">Password:</string>
    <string name="age">age:</string>
    <string name="sex">sex:</string>
    <string name="dependents">dependents:</string>
    <string name="veteran_restrictions">Veteran Restrictions</string>
    <string name="families_accepted">Families accepted</string>
    <string name="age_restrictions">Age Restrictions</string>
    <string name="youngest_age">youngest age</string>
    <string name="shelter_name">shelter name</string>
    <string name="notes">Notes: %1$s</string>
    <string name="number">Number: %1$s</string>
    <string name="anyone_accepted">This shelter accepts anyone</string>
    <string name="women_children_restriction">%1$s This shelter accepts women and children %2$s
        or younger. \n</string>
    <string name="children_restriction">%1$s
        You must have a child %2$s or younger in your party.\n</string>
    <string name="families_restriction">%1$s This shelter accepts families only.\n</string>
    <string name="males_restriction">%1$s This shelter accepts males only.\n</string>
    <string name = "females_restriction">%1$s This shelter accepts females only.\n</string>
    <string name="shelter_veterans_restriction">%1$s This shelter accepts veterans only.\n</string>
    <string name="beds_available">%1$s Beds available \n</string>
    <string name="rooms_available">%1$s %2$s Rooms available \n</string>
    <string name="no_rooms_available">No rooms available\n</string>
    <string name="beds_capacity">%1$s Beds capacity \n</string>
    <string name="rooms_capacity">%1$s %2$s Rooms capacity \n</string>
    <string name="no_room_capacity">No rooms capacity \n</string>


</resources>
