<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="weboolean.weboolean.SearchActivity"
    tools:showIn="@layout/activity_search">

    <RadioGroup
        android:id="@+id/RGroup"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="223dp"
        android:layout_marginStart="67dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/gender_radio"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/male"
            app:layout_constraintBottom_toTopOf="@+id/age_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.657"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.305" />

        <RadioButton
            android:id="@+id/female_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female"
            app:layout_constraintBottom_toTopOf="@+id/age_check"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.689"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.638" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/age_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="194dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="152dp"
        android:layout_weight="1"
        android:text="@string/age_restrictions"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/vet_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="163dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/veteran_restrictions"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_input" />

    <CheckBox
        android:id="@+id/fam_check"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="161dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="20dp"
        android:text="@string/families_accepted"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vet_check" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="146dp"
        android:layout_height="50dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="119dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="8dp"
        android:text="@string/search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/name_input"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/age_input"
        android:layout_width="121dp"
        android:layout_height="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/youngest_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_check" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="332dp"
        android:layout_height="48dp"
        android:layout_marginEnd="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/shelter_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="185dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:text="Gender of Spouse"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fam_check" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Search for Shelter"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047" />

</android.support.constraint.ConstraintLayout>
