<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android=
    "http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="weboolean.weboolean.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <!--<android.support.constraint.ConstraintLayout-->
        <!--android:layout_width="384dp"-->
        <!--android:layout_height="match_parent"-->
        <!--tools:layout_editor_absoluteX="0dp"-->
        <!--tools:layout_editor_absoluteY="332dp">-->

    <Switch
        android:id="@+id/family_check"
        android:layout_width="116dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/family"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sex" />

    <TextView
        android:id="@+id/register_title"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="117dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/veteran_check"
        android:layout_width="174dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/veteran_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dependents_layout"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/spouse"
        android:layout_width="170dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/dependents_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/family_check"
        app:layout_constraintVertical_bias="0.692">

        <TextView
            android:id="@+id/spouse_textview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/spouse"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spouse_input"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:entries="@array/spouse_sex"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/youngest_layout"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="196dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/dependents_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.503">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/youngest_age"
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:labelFor="@+id/youngest_age_input"
                android:text="@string/youngest_child" />

            <EditText
                android:id="@+id/youngest_age_input"
                android:layout_width="27dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="61dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        app:layout_constraintVertical_bias="0.004">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:labelFor="@+id/password_input"
                android:text="@string/password"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"
                android:text="@string/prompt_password" />
        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/age_layout"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35">

        <LinearLayout
            android:layout_width="99dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/age_view"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:labelFor="@+id/age_input"
                android:text="@string/age" />

            <EditText
                android:id="@+id/age_input"
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/sex"
        android:layout_width="151dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toStartOf="@+id/age_layout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_layout">

        <TextView
            android:id="@+id/sex_textview"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sex"
            android:textAlignment="viewStart" />

        <Spinner
            android:id="@+id/sex_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="1dp"
            android:entries="@array/sex"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/spouse_constraint" />
        <!--<RadioGroup-->
        <!--android:id="@+id/radioGroup"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--tools:layout_editor_absoluteX="44dp"-->
        <!--tools:layout_editor_absoluteY="403dp">-->

        <!--<RadioButton-->
        <!--android:id="@+id/male_radio"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="Male" />-->

        <!--<RadioButton-->
        <!--android:id="@+id/female_radio"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="Female" />-->
        <!--</RadioGroup>-->
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="333dp"
        android:layout_height="45dp"
        android:layout_marginEnd="61dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/email_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="18dp">

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="105dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:labelFor="@+id/email_input"
                android:text="@string/email"
                android:textAlignment="viewStart"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="54dp"
                tools:layout_editor_absoluteY="464dp" />

            <EditText
                android:id="@+id/email_input"
                android:layout_width="233dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/prompt_email" />

        </LinearLayout>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dependents_layout"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="387dp">

        <LinearLayout
            android:id="@+id/dependents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dependents_textview"
                android:layout_width="177dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:labelFor="@+id/dependent_input"
                android:text="@string/dependents"
                android:textAlignment="viewStart"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/dependent_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/dependent_input"
                android:layout_width="156dp"
                android:layout_height="45dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </LinearLayout>

    </android.support.design.widget.TextInputLayout>

    <!--</android.support.constraint.ConstraintLayout>-->
</android.support.constraint.ConstraintLayout>
